=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: [ 2145398 ] [ 2148349 ] Incorrect call to lb_config.php if it does not exist. (windmillway)
 - Fixed: [ 2046123 ] 4.1.5 ... link to gedrecord.php (fisharebest)
 - Fixed: [ 2044219 ] Editing records - Case sensitivity of PID (fisharebest)
 - Fixed: [ 2131257 ] 4.1.5rel places list misreads gedcom notes (fisharebest)
 - Fixed: [ 2025978 ] Changes Report (SVN 3591) (fisharebest)
 - Fixed: [ 2125739 ] 3913 Individual list (fisharebest)
 - Fixed: [ 2154489 ] [4030] Notes not saved (fisharebest)
 - Fixed: [ 1835731 ] Favorites summary doesn't work -> fv_gid too short (fisharebest)
 - Fixed: [ 2129466 ] [3931] Check GEDCOM (fisharebest)
 - Fixed: [ 2152310 ] [4030] or earlier- Events of Close relatives (fisharebest)
 - Fixed: [ 2152909 ] Pedigree Tree - problem with PEDIGREE_GENERATIONS (fisharebest)
 - Fixed: [ 2149514 ] [4018] email messages gives error (fisharebest)
 - Fixed: [ 2143803 ] [3964] media list error (fisharebest)
 - Fixed: [ 2127393 ] [3921] placelist.php can't cope with " quotes in placenames (fisharebest)
 - Fixed: [ 2131763 ] First Names Block (fisharebest)
 - Fixed [ 2134663 ] ALL CAPS surnames (opus27)
 - Added Advanced Search (yalnifj)
 - Changed: JWplayer : Corrected wrong path to Reorder option, now incudes correct thumbnail (windmillway)
 - Added: JW flash video player support whether Lightbox module installed or not. 
          Note: JWplayer module IS required for either case for flv playback. (windmillway)
 - Changed: JW flash video player support now in separate module. Prepares for upcoming flash video support with or w/o Lightbox. (windmillway)
 - Added [ 2014313 ] Clippings: limit number of generations (yalnifj)